--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,19 @@ authors = [
     {name = "Basti",email = "a@b.de"}
 ]
 readme = "README.md"
-requires-python = ">=3.13,<4.0"
+requires-python = ">=3.13,<3.15"
 dependencies = [
     "pygame (>=2.6.1,<3.0.0)",
     "pydantic (>=2.12.5,<3.0.0)",
     "pyyaml (>=6.0.3,<7.0.0)",
     "tkinterdnd2 (>=0.4.3,<0.5.0)",
     "ruff (>=0.14.14,<0.15.0)",
-    "jinja2 (>=3.1.6,<4.0.0)"
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "pyinstaller (>=6.18.0,<7.0.0)"
 ]
 
 [tool.poetry]
 package-mode = false
-
-[tool.poetry.dependencies]
-python="^3.13"
 
 
 [build-system]
